centered shelter show page and fixed stretched image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,5 +85,10 @@ img.image{
 /* ======= SHELTER SHOW ========== */
 
 img.show-img{
-  width: 50%;
+  width: 300px;
+  height: 300px;
+}
+div.show-center{
+    display: flex;
+    justify-content: center;
 }
